# NetC

./: .gitignore  README.md  _codeql_detected_source_root  socket.c
ONVIF-SIM/: DOCUMENTATION_INDEX.md  IMPLEMENTATION_SUMMARY.md  INTERFACE_BINDING.md  Makefile  README.md  README_AUTH.md  README_HTTP_HEADERS.md  README_MODULAR_DESIGN.md  README_ONVIF_AUTHENTICATION.md  README_OPENSSL_GUIDE.md  README_PACKET_ANALYSIS.md  README_XML_ONVIF.md  ROADMAP.md  SECURITY_REVIEW.md  USAGE.md  USER_MANAGEMENT.md  auth.c  auth.h  auth_example  auth_example.c  auth_example.xml  demo.sh  integration_example.c  onvif_discoverer.c
ONVIF-SIM/CamDiscoverer/: camdis  camdis.c  interface_binding.h
ONVIF-SIM/experimental/: Makefile  README.md  memory_explicit.c  raw_tcp_syscall.c  raw_udp_syscall.c
ONVIF-SIM/fakecamera/: .gitignore  Attempts.csv  CMakeLists.txt  Credentials.csv  CredsWithLevel.csv  MULTIPASS_QUICKSTART.md  README.md  TESTING_GUIDE.md  auth.xml  auth_server.h  auth_utils.h  config.h  config.xml  destroyed_dis_server.c  dis.xml  dis_utils.h  discovery_server  discovery_server.c  discovery_server.h  fakecamera  interface_binding.h  last_response.xml  main.c  mind_server.c  onvif_sim  scratchparserfordnsandnetint.h  serial.c  simpleparser.h  some.c  some.txt  tcp_config.h  test_dns_safe.sh  xml_parser.h
ONVIF-SIM/fakecamera/authhandler/: CredsWithLevel.csv  README.md  README_AUTH_UTILS.md  auth_utils.h  createuser.h  digest_auth.h  getuser.h  set_delete.h  setgethostname.h  setuser.h  user_management.h
ONVIF-SIM/fakecamera/docs/: 01-ONVIF-Authentication-Overview.md  02-HTTP-Digest-Authentication.md  03-WS-UsernameToken-Authentication.md  04-OpenSSL-Guide.md  05-XML-SOAP-Formats.md  06-HTTP-Protocol-Guide.md  07-Integration-Guide.md  08-auth_utils-Reference.md  README.md  libxml2_transition.md
ONVIF-SIM/fakecamera/network_config/: CMakeLists.txt  netplan_config.cpp
ONVIF-SIM/fakecamera/network_config/bm/: base64.c  base64.h  hqueue.c  hqueue.h  hxml.c  hxml.h  linked_list.c  linked_list.h  ppstack.c  ppstack.h  rfc_md5.c  rfc_md5.h  sha1.c  sha1.h  sys_buf.c  sys_buf.h  sys_inc.h  sys_log.c  sys_log.h  sys_os.c  util.c  util.h  word_analyse.c  word_analyse.h  xml_node.c  xml_node.h
ONVIF-SIM/fakecamera/network_config/include/: NetPlanManager.h  netplan_manager_c_api.h  nic_config.h
ONVIF-SIM/fakecamera/network_config/src/: NetplanManager.cpp  main.c  main.cpp  netplan_manager_c_api.cpp  nic_config.c
ONVIF-SIM/fakecamera/systemops/: systemops.h
ONVIF-SIM/fakecamera/vtpl_cnf/: vsaas_cloud_config.cnf
dynaimgtcp/: client.c  server.c
imgsharewithparitycheck/: client.c  protocol.h  server.c
kernelimplementationfromscratch/: impl.c  main.c  strcuts.h
onviflibrary/layer1/: CMakeLists.txt  clientudp.c  libxml.c  serverudp.c  udpmulticastdiscovery.h
onviflibrary/layer1/_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
simplemsg/: client.c  server.c
